Add basic CSS styling

--- a/front-end/tribute/tribute.html
+++ b/front-end/tribute/tribute.html
@@ -5,9 +5,29 @@
   <title>Wittgenstein Tribute</title>
 </head>
 
-
 <body>
-  <div class="container">
+  <div class="container" id="main">
+    <h1 id="title">Ludwig Wittgenstein</h1>
+    <h3>Philosopher of Language</h3>
+    <div id="img-div">
+      <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/6/60/35._Portrait_of_Wittgenstein.jpg"><img>
+      <div id="img-caption">
+        Portrait of Wittgenstein on being awarded a scholarship from Trinity College, Cambridge, 1929.
+      </div>
+    </div>
+    <div id="tribute-info"></p>
+      <p>Here are some important events with regard to Wittgenstein's life:</p>
+      <ul>
+        <li>April 26. 1889 - Born in Vienna, Austria-Hungary</li>
+        <li>October 23, 1906 - Began studies in mechanical engineering</li>
+        <li>October 18, 1911 - Wittgenstein meets Bertrand Russell</li>
+        <li>March 1916 - Began fighting for the Austro-Hungarian army</li>
+        <li>August 1918 - Finished work on Tractatus Logico-Philosophicus</li>
+        <li>1933 - 1935 - Lectures which make up the Blue and Brown Books were given</li>
+        <li>April 29, 1951 - Ludwig Wittgenstein died in Cambridge, England</li>
+        <li>1953 - Philosophical Investigations was published</li>
+      </ul>
+      <a id="tribute-link" href="https://en.wikipedia.org/wiki/Ludwig_Wittgenstein" target="_blank">link</a>
   </div>
 </body>
 </html>
