fix html/css link

--- a/front-end/tribute/tribute.html
+++ b/front-end/tribute/tribute.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" "styles/style.css" type="text/css">
+  <link rel="stylesheet" href="styles/style.css" type="text/css">
   <title>Wittgenstein Tribute</title>
 </head>
 
