begiin survey project

--- a/front-end/tribute/tribute.html
+++ b/front-end/tribute/tribute.html
@@ -16,18 +16,20 @@
       </div>
     </div>
     <div id="tribute-info"></p>
-      <p>Here are some important events with regard to Wittgenstein's life:</p>
+      <h3 id="headline">Here are some important events with regard to Wittgenstein's life:</h3>
       <ul>
-        <li>April 26. 1889 - Born in Vienna, Austria-Hungary</li>
-        <li>October 23, 1906 - Began studies in mechanical engineering</li>
-        <li>October 18, 1911 - Wittgenstein meets Bertrand Russell</li>
-        <li>March 1916 - Began fighting for the Austro-Hungarian army</li>
-        <li>August 1918 - Finished work on Tractatus Logico-Philosophicus</li>
-        <li>1933 - 1935 - Lectures which make up the Blue and Brown Books were given</li>
-        <li>April 29, 1951 - Ludwig Wittgenstein died in Cambridge, England</li>
-        <li>1953 - Philosophical Investigations was published</li>
+        <li><strong>April 26. 1889</strong> - Born in Vienna, Austria-Hungary</li>
+        <li><strong>October 23, 1906</strong> - Began studies in mechanical engineering</li>
+        <li><strong>October 18, 1911</strong> - Wittgenstein meets Bertrand Russell</li>
+        <li><strong>March 1916</strong> - Began fighting for the Austro-Hungarian army</li>
+        <li><strong>August 1918</strong> - Finished work on Tractatus Logico-Philosophicus</li>
+        <li><strong>1933 - 1935</strong> - Lectures which make up the Blue and Brown Books were given</li>
+        <li><strong>April 29, 1951</strong> - Ludwig Wittgenstein died in Cambridge, England</li>
+        <li><strong>1953</strong> - Philosophical Investigations was published</li>
       </ul>
-      <a id="tribute-link" href="https://en.wikipedia.org/wiki/Ludwig_Wittgenstein" target="_blank">link</a>
+      <div id="learnmore">
+        <p>To learn more about Ludwig Wittgenstein, <a id="tribute-link" href="https://en.wikipedia.org/wiki/Ludwig_Wittgenstein" target="_blank">click here.</a></p>
+      </div>
   </div>
 </body>
 </html>
