Add candidate radios

--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -22,12 +22,19 @@
         <label id="age-label" for="age">* Age</label>
         <input type="number" id="age" placeholder="Age" required>
       </div>
-      <div class="input-field">
+      <div class="input-radio">
         <label id="party-label" for="party">What political party are you registered with?</label>
         <ul style="list-style: none;">
           <li class="radio"><label>Republican <input name="radio-buttons" value="1" type="radio" class="party"</label></li>
-          <li class="radio"><label>Democrat <input name="radio-buttons" value="2" type="radio" class="party"</label></li>
+          <li class="radio"><label>Democratic <input name="radio-buttons" value="2" type="radio" class="party"</label></li>
           <li class="radio"><label>Other/No Party Affiliation <input name="radio-buttons" value="2" type="radio" class="party"</label></li>
+        </ul>
+      </div>
+      <div class="input-radio">
+        <label id="candidate-label" for="candidate">Who do you plan to vote for in the 2018 Gubernatorial Election?</label>
+        <ul style="list-style: none;">
+          <li class="radio"><label>Andrew Gillum <input name="radio-buttons" value="1" type="radio" class="candidate"</label></li>
+          <li class="radio"><label>Ron DeSantis <input name="radio-buttons" value="2" type="radio" class="candidate"</label></li>
         </ul>
       </div>
       <div class="dropdown">
