--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -33,9 +33,34 @@
       <div class="input-radio">
         <label id="candidate-label" for="candidate">Who do you plan to vote for in the 2018 Gubernatorial Election?</label>
         <ul style="list-style: none;">
-          <li class="radio"><label>Andrew Gillum <input name="radio-buttons" value="1" type="radio" class="candidate"</label></li>
-          <li class="radio"><label>Ron DeSantis <input name="radio-buttons" value="2" type="radio" class="candidate"</label></li>
+          <li class="radio"><label>Andrew Gillum <input name="radio-buttons" value="1" type="radio" class="candidate"></label></li>
+          <li class="radio"><label>Ron DeSantis <input name="radio-buttons" value="2" type="radio" class="candidate"></label></li>
         </ul>
+      </div>
+      <div class="checkbox">
+        <label id="issues-label" for="issues">What issues are most important to you? [Check all that apply]</label>
+        <ul style="list-style: none;">
+          <li class="checkbox">
+            <label><input name="issue-button" value="1" type="checkbox">Environment</label>
+          </li>
+          <li class="checkbox">
+            <label><input name="issue-button" value="2" type="checkbox">Gun Control</label>
+          </li>
+          <li class="checkbox">
+            <label><input name="issue-button" value="3" type="checkbox">Family Planning</label>
+          </li>
+          <li class="checkbox">
+            <label><input name="issue-button" value="4" type="checkbox">Minimum Wage</label>
+          </li>
+          <li class="checkbox">
+            <label><input name="issue-button" value="5" type="checkbox">Immigration</label>
+          </li>
+          <li class="checkbox">
+            <label><input name="issue-button" value="6" type="checkbox">Taxes</label>
+          </li>
+          <li class="checkbox">
+            <label><input name="issue-button" value="7" type="checkbox">Healthcare</label>
+          </li>
       </div>
       <div class="dropdown">
         <label id="region-label" for="region">What is your nearest metropolitan area?</label>
