Fix form id line 12

--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -9,7 +9,7 @@
   <h1 id="title">Survey Form</h1>
   <div class="contatiner" id="main">
     <p id="description">Demographics Study</p>
-    <form=id"survey-form" action="https://crossorigin.me/https://freecodecamp.com">
+    <form id="survey-form" action="https://crossorigin.me/https://freecodecamp.com">
       <div class="input-field">
         <label id="name-label" for="name">* Name</label>
         <input autofocus type="text" id="name" placeholder="Enter your name" required>
