--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -25,8 +25,8 @@
       <div class="input-radio">
         <label id="party-label" for="party">What political party are you registered with?</label>
         <ul style="list-style: none;">
-          <li class="radio"><label>Republican <input name="radio-buttons" value="1" type="radio" class="party"</label></li>
-          <li class="radio"><label>Democratic <input name="radio-buttons" value="2" type="radio" class="party"</label></li>
+          <li class="radio"><label>Republican <input name="radio-buttons" value="1" type="radio" class="party"></label></li>
+          <li class="radio"><label>Democratic <input name="radio-buttons" value="2" type="radio" class="party"></label></li>
           <li class="radio"><label>Other/No Party Affiliation <input name="radio-buttons" value="2" type="radio" class="party"</label></li>
         </ul>
       </div>
