fix email input type

--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -16,7 +16,7 @@
       </div>
       <div class="input-field">
         <label id="email-label" for="email">* Email</label>
-        <input type="text" id="email" placeholder="Enter your email" required>
+        <input type="email" id="email" placeholder="Enter your email" required>
       </div>
       <div class="input-field">
         <label id="number-label" for="age">* Age</label>
