--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -20,7 +20,7 @@
       </div>
       <div class="input-field">
         <label id="number-label" for="age">* Age</label>
-        <input type="number" id="age" placeholder="Age" min="1" max="125" required>
+        <input type="number" id="number" placeholder="Age" min="1" max="125" required>
       </div>
       <div class="input-radio">
         <label id="party-label" for="party">What political party are you registered with?</label>
