Add text field for issue suggestions

--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -62,6 +62,10 @@
             <label><input name="issue-button" value="7" type="checkbox">Healthcare</label>
           </li>
       </div>
+      <div class="textbox">
+        <label for="comments">Other issues that are important to you:</label>
+        <textarea id="comments" class="input-field" style="height: 50px; resize: vertical;" name="comment" placeholder="Enter issues here (separated by commas)"></textarea>
+      </div>
       <div class="dropdown">
         <label id="region-label" for="region">What is your nearest metropolitan area?</label>
         <select id="dropdown">
@@ -78,6 +82,7 @@
         </select>
         <button type="sumbit" id="submit">Submit</button>
       </div>
+
     </form>
   </div>
 
