--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -10,14 +10,27 @@
   <div class="contatiner" id="main">
     <p id="description">Demographics Study</p>
     <form id="survey-form" action="https://crossorigin.me/https://freecodecamp.com">
-      <div class="input-field">
-        <label id="name-label" for="name">* Name</label>
-        <input autofocus type="text" id="name" placeholder="Enter your name" required>
+
+      <div class="rowTab">
+        <div class="labels">
+          <label id="name-label" for="name">* Name</label>
+        </div>
+
+        <div class="rightTab">
+          <input autofocus type="text" id="name" placeholder="Enter your name" class="input-field" required>
+        </div>
       </div>
-      <div class="input-field">
-        <label id="email-label" for="email">* Email</label>
-        <input type="email" id="email" placeholder="Enter your email" required>
+
+      <div class="rowTab">
+        <div class="labels">
+          <label id="email-label" for="email">* Email</label>
+        </div>
+
+        <div class="rightTab">
+          <input type="email" id="email" class="input-field" placeholder="Enter your email" required>
+        </div>
       </div>
+
       <div class="input-field">
         <label id="number-label" for="age">* Age</label>
         <input type="number" id="number" placeholder="Age" min="1" max="125" required>
