--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -31,10 +31,15 @@
         </div>
       </div>
 
-      <div class="input-field">
-        <label id="number-label" for="age">* Age</label>
-        <input type="number" id="number" placeholder="Age" min="1" max="125" required>
+      <div class="rowTab">
+        <div class="labels"
+          <label id="number-label" for="age">* Age</label>
+        </div>
+        <div class="rightTab">
+          <input type="number" id="number" class="input-field" placeholder="Age" min="1" max="125" required>
+        </div>
       </div>
+      
       <div class="input-radio">
         <label id="party-label" for="party">What political party are you registered with?</label>
         <ul style="list-style: none;">
