put text after radio button

--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -46,9 +46,9 @@
         </div>
         <div class="rightTab">
           <ul style="list-style: none;">
-            <li class="radio"><label>Republican <input name="radio-buttons" value="1" type="radio" class="party"></label></li>
-            <li class="radio"><label>Democratic <input name="radio-buttons" value="2" type="radio" class="party"></label></li>
-            <li class="radio"><label>Other/No Party Affiliation <input name="radio-buttons" value="2" type="radio" class="party"</label></li>
+            <li class="radio"><label> <input name="radio-buttons" value="1" type="radio" class="party">Republican</label></li>
+            <li class="radio"><label> <input name="radio-buttons" value="2" type="radio" class="party">Democratic</label></li>
+            <li class="radio"><label><input name="radio-buttons" value="2" type="radio" class="party">Other/No Party Affiliation</label></li>
           </ul>
         </div>
       </div>
@@ -59,8 +59,8 @@
         </div>
         <div class="rightTab">
           <ul style="list-style: none;">
-            <li class="radio"><label>Andrew Gillum <input name="radio-buttons" value="1" type="radio" class="candidate"></label></li>
-            <li class="radio"><label>Ron DeSantis <input name="radio-buttons" value="2" type="radio" class="candidate"></label></li>
+            <li class="radio"><label> <input name="radio-buttons" value="1" type="radio" class="candidate">Andrew Gillum</label></li>
+            <li class="radio"><label> <input name="radio-buttons" value="2" type="radio" class="candidate">Ron DeSantis</label></li>
           </ul>
         </div>
       </div>
