fix radio buttons to allow answers to both questions

--- a/front-end/survey/survey.html
+++ b/front-end/survey/survey.html
@@ -46,9 +46,9 @@
         </div>
         <div class="rightTab">
           <ul style="list-style: none;">
-            <li class="radio"><label> <input name="radio-buttons" value="1" type="radio" class="party">Republican</label></li>
-            <li class="radio"><label> <input name="radio-buttons" value="2" type="radio" class="party">Democratic</label></li>
-            <li class="radio"><label><input name="radio-buttons" value="2" type="radio" class="party">Other/No Party Affiliation</label></li>
+            <li class="radio"><label> <input name="radio-buttons-1" value="1" type="radio" class="party">Republican</label></li>
+            <li class="radio"><label> <input name="radio-buttons-1" value="2" type="radio" class="party">Democratic</label></li>
+            <li class="radio"><label><input name="radio-buttons-1" value="2" type="radio" class="party">Other/No Party Affiliation</label></li>
           </ul>
         </div>
       </div>
@@ -59,8 +59,8 @@
         </div>
         <div class="rightTab">
           <ul style="list-style: none;">
-            <li class="radio"><label> <input name="radio-buttons" value="1" type="radio" class="candidate">Andrew Gillum</label></li>
-            <li class="radio"><label> <input name="radio-buttons" value="2" type="radio" class="candidate">Ron DeSantis</label></li>
+            <li class="radio"><label> <input name="radio-buttons-2" value="1" type="radio" class="candidate">Andrew Gillum</label></li>
+            <li class="radio"><label> <input name="radio-buttons-2" value="2" type="radio" class="candidate">Ron DeSantis</label></li>
           </ul>
         </div>
       </div>
