finish product project

--- a/front-end/product-page/product.html
+++ b/front-end/product-page/product.html
@@ -2,11 +2,64 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles/style.css" type="text/css">
-  <title>Product Landing Page</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <title>Food Not Bombs</title>
 </head>
 
-<body>
-</body>
+
+<div id="page-wrapper">
+  <header id="header">
+    <div class="navbar">
+      <div class="logo">
+        <img id="header-img" src="assets/FNB_logo.png" alt="fnblogo">
+      </div>
+
+      <div class="navlink"><a href="">Home</a></div>
+      <div class="navlink"><a href="#about">About</a></div>
+      <div class="navlink"><a href="#donate">Donate</a></div>
+      <div class="navlink"><a href="#footer">Contact Us</a></div>
+    </div>
+  </header>
+
+  <div class="container">
+    <section id="email">
+      <h2>Join our Mailing List!</h2>
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <input autofocus type="email" id="email" placeholder="Enter your Email" class="input-field" required>
+        <button type="sumbit" id="join">Join</button>
+      </form>
+    </section>
+    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Nz9K_ValbCY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section id="about">
+      <h2>Food Not Bombs Orlando</h2>
+      <p>As the economic, political and environmental crises grow more urgent, Food Not Bombs is often the place where people turn for organic vegan meals, groceries, information and emotional support. Many people tell us that Food Not Bombs changed their lives. Others say we saved their lives. Food Not Bombs is as busy as ever with the increase in poverty and homelessness. Imagine how much we could do if a million people each donated a dollar to Food Not Bombs. Because we recover the food we can provide meals to more then five people per dollar. We are doing so much with the money that has already been contributed; sharing thousands of vegan and vegetarian meals every week in over 1,000 communities in 65 countries around the world.</p>
+      <br>
+      <p>For the past 37 years Food Not Bombs has been feeding people in hundreds of communities all over the world absolutely free of charge and without restriction. Food Not Bombs has no paid staff and is an all volunteer movement. Your contribution goes directly towards ending hunger, poverty, and war. Food Not Bombs is offering you the opportunity to support this important movement by sending in just ONE DOLLAR! Imagine if everyone donated even more. It is a great time to stop underestimating the power of one. Give it a try and pass on the word. For just one dollar you can help build a world based on peace and justice. And of course feel free to contribute more if you can.</p>
+    </section>
+    <section id="donate">
+      <h2>DONATE TODAY</h2>
+      <div class="donation-container">
+        <div id="donate-20" class="donation-box">
+        <h3>Donate $30</h3>
+        <p>Feed at least 10 people with your kind donation.<p>
+        <button type="sumbit" class="submit">Donate</button>
+        </div>
+        <div id="donate-custom" class="donation-box">
+        <h3>Donate Any Amount</h3>
+        <p>Feed as many people as your benevolent heart desires!</p>
+        <button type="sumbit" class="submit">Donate</button>
+        </div>
+      </div>
+    </section>
+    <section id="footer">
+    <div class="contact">
+      <h4>Contact Us</h4>
+      <p>Tel. 575-770-3377 | 1-800-884-1136 | P.O. Box 422 - Santa Cruz, CA 95061 USA<p>
+    </div>
+    </section>
+  </div>
+</div>
+
 
 <footer>
 </footer>
