add nav element

--- a/front-end/documentation/doc.html
+++ b/front-end/documentation/doc.html
@@ -6,6 +6,10 @@
   <title>JS Documentation</title>
 </head>
 
+<nav id="navbar">
+  <header>JS Documentation</header>
+</nav>
+
 <main id="main-doc">
   <section class="main-section" id="introduction">
     <header>Introduction</header>
