--- a/front-end/documentation/doc.html
+++ b/front-end/documentation/doc.html
@@ -8,6 +8,21 @@
 
 <nav id="navbar">
   <header>JS Documentation</header>
+  <ul>
+    <a class="nav-link" href="#introduction" rel="internal"><li>Introduction</li></a>
+    <a class="nav-link" href="#what_you_should_already_know" rel="internal"><li>What You Should Already Know</li></a>
+    <a class="nav-link" href="#javascript_and_java" rel="internal"><li>Javascript and Java</li></a>
+    <a class="nav-link" href="#hello_world" rel="internal"><li>Hello World</li></a>
+    <a class="nav-link" href="#variables" rel="internal"><li>Variables</li></a>
+    <a class="nav-link" href="#declaring_variables" rel="internal"><li>Declaring Variables</li></a>
+    <a class="nav-link" href="#variable_scope" rel="internal"><li>Variable Scope</li></a>
+    <a class="nav-link" href="#global_variables" rel="internal"><li>Global Variables</li></a>
+    <a class="nav-link" href="#constants" rel="internal"><li>Constants</li></a>
+    <a class="nav-link" href="#if_else_statements" rel="internal"><li>if...else Statements</li></a>
+    <a class="nav-link" href="#while_statement" rel="internal"><li>while Statement</li></a>
+    <a class="nav-link" href="#function_declarations" rel="internal"><li>Function Declarations</li></a>
+    <a class="nav-link" href="#reference" rel="internal"><li>Reference</li></a>
+  </ul>
 </nav>
 
 <main id="main-doc">
@@ -57,7 +72,7 @@
     <p>You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.</p>
   </section>
 
-  <section class="main-section" id="declaring_a_variable">
+  <section class="main-section" id="declaring_variables">
     <header>Declaring variables</header>
     <p>You can declare a variable in three ways:<p>
     <p>With the keyword var. For example,</p>
@@ -218,7 +233,7 @@
     </ul>
   </section>
 
-  <section class="main-section" id="function_declaration">
+  <section class="main-section" id="function_declarations">
     <header>Function declarations</header>
     <p>A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:<p>
     <ul>
