--- a/front-end/documentation/doc.html
+++ b/front-end/documentation/doc.html
@@ -18,7 +18,7 @@
     <a class="nav-link" href="#variable_scope" rel="internal"><li>Variable Scope</li></a>
     <a class="nav-link" href="#global_variables" rel="internal"><li>Global Variables</li></a>
     <a class="nav-link" href="#constants" rel="internal"><li>Constants</li></a>
-    <a class="nav-link" href="#if_else_statements" rel="internal"><li>if...else Statements</li></a>
+    <a class="nav-link" href="#if...else_statement" rel="internal"><li>if...else Statement</li></a>
     <a class="nav-link" href="#while_statement" rel="internal"><li>while Statement</li></a>
     <a class="nav-link" href="#function_declarations" rel="internal"><li>Function Declarations</li></a>
     <a class="nav-link" href="#reference" rel="internal"><li>Reference</li></a>
@@ -157,7 +157,7 @@
     <p>Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.</p>
   </section>
 
-  <section class="main-section" id="if_else_statements">
+  <section class="main-section" id="if...else_statement">
     <header>if...else statement</header>
     <p>Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
     <code>
