fix nav-link typo

--- a/front-end/documentation/doc.html
+++ b/front-end/documentation/doc.html
@@ -18,6 +18,7 @@
     <a class="nav-link" href="#variable_scope" rel="internal"><li>Variable Scope</li></a>
     <a class="nav-link" href="#global_variables" rel="internal"><li>Global Variables</li></a>
     <a class="nav-link" href="#constants" rel="internal"><li>Constants</li></a>
+    <a class="nav-link" href="#data_types" rel="internal"><li>Data Types</li></a>
     <a class="nav-link" href="#if...else_statement" rel="internal"><li>if...else Statement</li></a>
     <a class="nav-link" href="#while_statement" rel="internal"><li>while Statement</li></a>
     <a class="nav-link" href="#function_declarations" rel="internal"><li>Function Declarations</li></a>
